--- a/index.html
+++ b/index.html
@@ -2,5 +2,11 @@
     <head>
     </head>
     <body>
+        <div class="mermaid">
+            graph TD 
+            A[fun] --> B[fun]
+            B[fun] --> A[fun]
+        </div>
+        <script src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
     </body>
 </html>
