--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <html>
-    <head>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css">
-    </head>
-    <body>
-        <div class="mermaid">
-            graph TD 
-            A[fun] --> B[fun]
-            B[fun] --> A[fun]
-        </div>
-        <script src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
-    </body>
+  <head>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css"
+    />
+  </head>
+  <body>
+    <div class="mermaid">graph TD A[fun] --> B[fun] B[fun] --> A[fun]</div>
+    <script src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
+  </body>
 </html>
