ignoring prettier on mermaid

--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     />
   </head>
   <body>
-    <div class="mermaid">graph TD A[fun] --> B[fun] B[fun] --> A[fun]</div>
+    <!-- prettier-ignore -->
+    <div class="mermaid">
+      graph TD
+      A[fun] --> B[fun]
+      B[fun] --> A[fun]
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
   </body>
 </html>
