--- a/index.html
+++ b/index.html
@@ -13,5 +13,15 @@
       B[fun] --> A[fun]
     </div>
     <script src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
+    <script>
+      mermaid.initialize({
+        theme: "neutral",
+        logLevel: 3,
+        securityLevel: "loose",
+        flowchart: { curve: "basis" },
+        gantt: { axisFormat: "%m/%d/%Y" },
+        sequence: { actorMargin: 50 },
+      });
+    </script>
   </body>
 </html>
